# TipToi-Bookworm

./: README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: tests.yml
src/bookworm/: catalog.py  cli.py  downloader.py
tests/: test_catalog.py  test_cli.py  test_downloader.py  test_run.py
