[project]
name = "tiptoi-bookworm"
version = "0.1.0"
description = "A CLI tool to search and download TipToi audio files from Ravensburger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
bookworm = "bookworm.cli:main"
